--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -930,6 +930,8 @@
                                                           <th scope="col" style="font-size: 8px;">AOA Number</th>
                                                           <th scope="col"  style="font-size: 8px;">Emigrate Number</th>
                                                           <th scope="col" style="font-size: 8px;">Document</th>
+                                                          <th scope="col" style="font-size: 8px;">Document</th>
+                                                          <th scope="col"style="font-size: 8px;">AOA</th>
                                                           <th scope="col"style="font-size: 8px;">AOA</th>
                                                           <th scope="col" style="font-size: 8px;">Actions</th>
                                                       </tr>
