--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -807,7 +807,7 @@
                  
               Nemo & Nautilus Shipping 
 
-                 <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - May 25th)</div>
+                 <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - June 15th)</div>
               </div>
               
              
@@ -863,7 +863,7 @@
                     <p class="loading-message">Loading..</p>
                   </div> -->
                   
-                  <div style=''>
+                  <div>
                   <div class="card mt-4"> 
                     <div class="d-flex justify-content-between p-2 ps-4 pe-4">
                                               <span><a href="./birthday.html">Birthdays</a></span>
