--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -669,10 +669,10 @@
                                             
                                         >
                                             <option value="" disabled selected>Select Marital Status</option>
-                                            <option value="Single">Single</option>
-                                            <option value="Married">Married</option>
-                                            <option value="Divorced">Divorced</option>
-                                            <option value="Widow">Widow</option>
+                                            <option value="SINGLE">Single</option>
+                                            <option value="MARRIED">Married</option>
+                                            <option value="DIVORCED">Divorced</option>
+                                            <option value="WIDOW">Widow</option>
                                         </select>
                                         <label for="company_status">Marital Status</label>
                                     </div>
@@ -725,8 +725,8 @@
                                             
                                         >
                                             <option value="" disabled selected>Select Option</option>
-                                            <option value="yes">Yes</option>
-                                            <option value="no">No</option>
+                                            <option value="Yes">Yes</option>
+                                            <option value="No">No</option>
                                         </select>
                                         <label for="candidate_work_nautilus">Worked with us</label>
                                     </div>
@@ -906,9 +906,9 @@
                                 <div class="form-floating">
                                     <select id="candidate_group" class="form-select" >
                                         <option value="" disabled selected>-- Select Group --</option>
-                                        <option value="Officer">Officer</option>
-                                        <option value="Rating">Rating</option>
-                                        <option value="IV crew">IV crew</option>
+                                        <option value="1">Officer</option>
+                                        <option value="2">Rating</option>
+                                        <option value="6">IV crew</option>
                                     </select>
                                     <label for="candidate_group">Group</label>
                                 </div>
