--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -716,10 +716,10 @@
                                         
                                     >
                                         <option value="" disabled selected>Select Marital Status</option>
-                                        <option value="Single">Single</option>
-                                        <option value="Married">Married</option>
-                                        <option value="Divorced">Divorced</option>
-                                        <option value="Widow">Widow</option>
+                                        <option value="SINGLE">Single</option>
+                                        <option value="MARRIED">Married</option>
+                                        <option value="DIVORCED">Divorced</option>
+                                        <option value="WIDOW">Widow</option>
                                     </select>
                                     <label for="edit_company_status">Marital Status</label>
                                 </div>
@@ -772,8 +772,8 @@
                                         
                                     >
                                         <option value="" disabled selected>Select Option</option>
-                                        <option value="yes">Yes</option>
-                                        <option value="no">No</option>
+                                        <option value="Yes">Yes</option>
+                                        <option value="No">No</option>
                                     </select>
                                     <label for="edit_candidate_work_nautilus">Worked with us</label>
                                 </div>
@@ -938,8 +938,8 @@
                                         
                                     >
                                         <option value="" disabled selected>Select Candidate Status</option>
-                                        <option value="active">Active</option>
-                                        <option value="inactive">Inactive</option>
+                                        <option value="1">Active</option>
+                                        <option value="0">Inactive</option>
                                     </select>
                                     <label for="edit_candidate_company_status">Candidate Status</label>
                                 </div>
@@ -953,9 +953,9 @@
                             <div class="form-floating">
                                 <select id="edit_candidate_group" class="form-select" >
                                     <option value="" disabled selected>-- Select Group --</option>
-                                    <option value="Officer">Officer</option>
-                                    <option value="Rating">Rating</option>
-                                    <option value="IV crew">IV crew</option>
+                                    <option value="1">Officer</option>
+                                    <option value="2">Rating</option>
+                                    <option value="6">IV crew</option>
                                 </select>
                                 <label for="edit_candidate_group">Group</label>
                             </div>
