--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -636,7 +636,7 @@
                     loader.style.display = 'block';
                     error.style.display = 'none';
     
-                    axios.get('https://nemo.ivistaz.co/candidate/birthday', {
+                    axios.get('http://localhost:4000/candidate/birthday', {
                         params: { date },
                         headers: { "Authorization": token }
                     })
@@ -733,7 +733,7 @@
     // Send request to update logged status to false
     const userId = localStorage.getItem('userId');
     if (userId) {
-      axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
+      axios.put(`http://localhost:4000/user/${userId}/logout`)
         .then(response => {
           console.log('Logged out successfully');
         })
