--- a/views/public/html/reminder-document.html
+++ b/views/public/html/reminder-document.html
@@ -617,7 +617,7 @@
   // Send request to update logged status to false
   const userId = localStorage.getItem('userId');
   if (userId) {
-    axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
+    axios.put(`http://localhost:4000/user/${userId}/logout`)
       .then(response => {
         console.log('Logged out successfully');
       })
@@ -671,7 +671,7 @@
                       loader.style.display = 'block';
                       error.style.display = 'none';
           
-                      let url = 'https://nemo.ivistaz.co/candidate/expiry-date';
+                      let url = 'http://localhost:4000/candidate/expiry-date';
                       let requestData = {}; // Initialize request data object
           
                       if (selectedDate) {
