--- a/views/public/html/seaservicetable.html
+++ b/views/public/html/seaservicetable.html
@@ -762,7 +762,7 @@
                 async function fetchAndDisplaySeaService(candidateId) {
                     try {
                         const token = localStorage.getItem('token');
-                        const response = await axios.get(`http://localhost:4000/candidate/get-sea-service/${candidateId}`, {
+                        const response = await axios.get(`https://nemo.ivistaz.co/candidate/get-sea-service/${candidateId}`, {
                             headers: { "Authorization": token }
                         });
             
@@ -805,7 +805,7 @@
                     if (confirm('Are you sure you want to delete this sea service record?')) {
                         try {
                             const token = localStorage.getItem('token');
-                            await axios.delete(`http://localhost:4000/candidate/delete-sea-service/${id}`, { headers: { "Authorization": token } });
+                            await axios.delete(`https://nemo.ivistaz.co/candidate/delete-sea-service/${id}`, { headers: { "Authorization": token } });
                             // Remove the corresponding row from the table
                             const seaServiceRow = document.getElementById(`seaServiceRow-${id}`);
                             seaServiceRow.remove();
@@ -853,7 +853,7 @@
         try {
             const token = localStorage.getItem('token');
             const id = localStorage.getItem('memId');
-            const response = await axios.post(`http://localhost:4000/candidate/sea-service/${id}`, formData, { headers: { "Authorization": token } });
+            const response = await axios.post(`https://nemo.ivistaz.co/candidate/sea-service/${id}`, formData, { headers: { "Authorization": token } });
             console.log(response.data);
             alert('Sea Service record added successfully!');
             seaServiceForm.reset();
@@ -871,7 +871,7 @@
   // Send request to update logged status to false
   const userId = localStorage.getItem('userId');
   if (userId) {
-    axios.put(`http://localhost:4000/user/${userId}/logout`)
+    axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
       .then(response => {
         console.log('Logged out successfully');
       })
@@ -897,7 +897,7 @@
 
 async function fetchAndDisplayCompanies() {
             try {
-                const companyResponse = await axios.get("http://localhost:4000/company/dropdown-company", {
+                const companyResponse = await axios.get("https://nemo.ivistaz.co/company/dropdown-company", {
                     headers: { "Authorization": token }
                 });
                 const companies = companyResponse.data.companies;
@@ -918,7 +918,7 @@ async function fetchAndDisplayCompanies() {
 
         async function fetchAndDisplayRanks() {
             try {
-                const rankResponse = await axios.get("http://localhost:4000/others/get-ranks", {
+                const rankResponse = await axios.get("https://nemo.ivistaz.co/others/get-ranks", {
                     headers: { "Authorization": token }
                 });
                 const ranks = rankResponse.data.ranks;
@@ -939,7 +939,7 @@ async function fetchAndDisplayCompanies() {
 
         async function fetchAndDisplayVessels() {
             try {
-                const vesselResponse = await axios.get("http://localhost:4000/others/get-vessel", {
+                const vesselResponse = await axios.get("https://nemo.ivistaz.co/others/get-vessel", {
                     headers: { "Authorization": token }
                 });
                 const vessels = vesselResponse.data.vessels;
@@ -960,7 +960,7 @@ async function fetchAndDisplayCompanies() {
 
         async function fetchAndDisplayVesselTypes() {
             try {
-                const vesselTypeResponse = await axios.get("http://localhost:4000/others/get-vsls", {
+                const vesselTypeResponse = await axios.get("https://nemo.ivistaz.co/others/get-vsls", {
                     headers: { "Authorization": token }
                 });
                 const vesselTypes = vesselTypeResponse.data.vessels;
