--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -776,7 +776,7 @@
           <!-- Navbar -->
           
           <nav
-            class="layout-navbar container-fluid navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
+            class="layout-navbar container-fluid navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme pe-0"
             id="layout-navbar"
           >
             <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
@@ -814,17 +814,19 @@
               
               <!-- /Search -->
 
-              <span style="width: 100px;">
+              <span style="width: 150px;" >
               
                  
+             
                   
-                      
-                      <a class="fw-semibold d-block fw-bolder text-primary " href="./profile.html" id="user_name"></a>
+                        <a href="./profile.html" class="btn  card" >
+                      <span class="fw-semibold d-block fw-bolder text-primary p-1"  id="user_name" ></span>
                       
                       <small class="text-muted"><span id="user-group"></span></small>
-                      
+                    </a>
+                     
                     
-               
+             
               </span>
                 </span>
                 <!--/ User -->
