--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -619,33 +619,33 @@
                                       <div class="row mb-3">
                                           <div class="col-md-6">
                                               <label for="avb_date" class="form-label">Available Date</label>
-                                              <input type="date" class="form-control" id="avb_date" required />
+                                              <input type="date" class="form-control" id="avb_date"  />
                                           </div>
                                           <div class="col-md-6">
                                               <label for="las_date" class="form-label">Last Date</label>
-                                              <input type="date" class="form-control" id="las_date" required />
+                                              <input type="date" class="form-control" id="las_date"  />
                                           </div>
                                       </div>
                                       <div class="row mb-3">
                                           <div class="col-md-6">
                                               <label for="last_salary" class="form-label">Last Salary</label>
-                                              <input type="text" class="form-control" id="last_salary" required />
+                                              <input type="text" class="form-control" id="last_salary"  />
                                           </div>
                                           <div class="col-md-6">
                                               <label for="last_company" class="form-label">Last Company</label>
-                                              <input type="text" class="form-control" id="last_company" required />
+                                              <input type="text" class="form-control" id="last_company"  />
                                           </div>
                                       </div>
                                       <div class="row mb-3">
                                           <div class="col-md-6">
                                               <label for="rank" class="form-label">Select Rank</label>
-                                              <select id="rank" class="form-select" required>
+                                              <select id="rank" class="form-select" >
                                                   <!-- Options will be dynamically added using JavaScript -->
                                               </select>
                                           </div>
                                           <div class="col-md-6">
                                               <label for="vessel_types" class="form-label">Select Vessel</label>
-                                              <select id="vessel_types" class="form-select" required>
+                                              <select id="vessel_types" class="form-select" >
                                                   <!-- Options will be dynamically added using JavaScript -->
                                               </select>
                                           </div>
@@ -653,7 +653,7 @@
                                       <div class="row mb-3">
                                           <div class="col-md-6 mt-0">
                                               <label for="status" class="form-label">Status</label>
-                                              <select id="status" name="status" class="form-select" required>
+                                              <select id="status" name="status" class="form-select" >
                                                   <option value="active">Active</option>
                                                   <option value="inactive">Inactive</option>
                                               </select>
