--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -812,14 +812,14 @@
                                 <div class="row mb-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input name="aoanum" type="text" id="contract_aoa_num" class="form-control"/>
+                                            <input name="aoanum" type="text" id="contract_aoa_num" class="form-control" required/>
                                             <label for="contract_aoa_num">AOA Number</label>
 
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                       <div class="form-floating">
-                                          <input name="enumber" type="text" id="contract_emigrate" class="form-control"/>
+                                          <input name="enumber" type="text" id="contract_emigrate" class="form-control" required/>
                                           <label for="contract_emigrate">Emigrate Number</label>
                                       </div>
                                   </div>
