--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -686,6 +686,12 @@
                 </select>
             </div>
         </div>
+        <div class="row">
+        <div class="col">
+          <label for="ageNemo" class="form-label">Age</label>
+          <input type="text" class="form-control form-control-sm" id="ageNemo">
+      </div>
+        </div>
         <div class="row ">
             <div class=" text-end mt-3 mb-0 pb-0">
                 <button type="submit" class="btn btn-primary ">Search</button>
