--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -652,7 +652,7 @@
                             <div class="row">
                               <div class="col-md-6">
                                 <div class="form-floating">
-                                    <select id="candidate_nationality" class="form-select" required>
+                                    <select id="candidate_nationality" class="form-select" >
                                         <option value="" disabled selected>-- Select Nationality --</option>
                                         <!-- Options will be dynamically added using JavaScript -->
                                     </select>
@@ -735,7 +735,7 @@
         
                                 <div class="col-md-6">
                                   <div class="form-floating">
-                                      <select id="candidate_c_vessel" class="form-select" required>
+                                      <select id="candidate_c_vessel" class="form-select" >
                                           <option value="" disabled selected>-- Select Vessel Type --</option>
                                           <!-- Options will be dynamically added using JavaScript -->
                                       </select>
@@ -934,7 +934,7 @@
                         <div class="card-body pb-0 pt-2 ">
                          <div class="col-md-12">
                                 <div class="form-floating">
-                                    <select id="candidate_us_visa" class="form-select" required>
+                                    <select id="candidate_us_visa" class="form-select" >
                                         <option value="" disabled selected>-- Select Option --</option>
                                         <option value="1">Yes</option>
                                         <option value="0">No</option>
@@ -1019,7 +1019,7 @@
                                             id="candidate_c_mobi1"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_1_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_c_mobi1">Mobile</label>
                                     </div>
