--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -738,7 +738,7 @@
                                           <label for="basic_comments" class="form-label">Comments </label>
                                           <div class="row">
                                               <div class="col-md-6">
-                                                  <input type="text" id="basic_comments" class="form-control" name="basic_comments">
+                                                  <input type="text-area" id="basic_comments" class="form-control" name="basic_comments">
                                               </div>
                                               <div class="col-md-6 mt-md-0 mt-2">
                                                   <div class="form-check">
