--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -753,7 +753,7 @@
                                                     <input type="text" class="form-control small-font" id="edit_candidate_indos_number"  aria-describedby="fieldX_1_Help" required />
                                                 </div>
                                                 <div class="col-md-2 mb-1">
-                                                    <label for="edit_candidate_company_status">Candidate Status</label>
+                                                    <label for="edit_candidate_company_status">Company Status</label>
                                                     <input type="text" class="form-control small-font" id="edit_candidate_company_status" />
                                                 </div>
                                                 <div class="col-md-2 mb-1">
@@ -764,6 +764,10 @@
                                                     <label for="edit_candidate_vendor">Vendor</label>
                                                     <input type="text" class="form-control small-font" id="edit_candidate_vendor"  aria-describedby="fieldX_2_Help" required />
                                                 </div>
+                                                <div class="col-md-2 mb-1">
+                                                  <label for="edit_candidate_active_details">Active Details</label>
+                                                  <input type="text" class="form-control small-font" id="edit_candidate_active_details"  aria-describedby="fieldX_2_Help" required />
+                                              </div>
                                                 <div class="col-md-2 mb-1">
                                                   <label for="edit_candidate_us_visa">US Visa</label>
                                                   <select id="edit_candidate_us_visa" class="form-select form-control" required>
@@ -848,7 +852,6 @@
                                                                   <!-- Repeat the card-body block for each set of fields -->
                         
                                         
-                                        <input type="hidden" placeholder="Enter active details" id="edit_candidate_active_details" required>
                         <input type="hidden" placeholder="Enter area code1" id="edit_candidate_area_code1" required>
                         <input type="hidden" placeholder="Enter area code2" id="edit_candidate_area_code2" required>
                         <input type="hidden" placeholder="Enter category" id="edit_candidate_category" required>
