--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -735,10 +735,11 @@
                               <hr>
                                   <div class="col-md-12 mb-2">
                                     <div class="">
-                                          <label for="basic_comments" class="form-label">Comments </label>
+                                          
                                           <div class="row">
-                                              <div class="col-md-6">
-                                                  <input type="text-area" id="basic_comments" class="form-control" name="basic_comments">
+                                            
+                                              <div class="col">
+                                                <label for="basic_comments" class="form-label" >Comments  <textarea name="basic_comments" id="basic_comment" cols="30" rows="10" class="form-control"></textarea> </label>
                                               </div>
                                               <div class="col-md-6 mt-md-0 mt-2">
                                                   <div class="form-check">
