--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -739,7 +739,7 @@
                                           <div class="row">
                                             
                                               <div class="col">
-                                                <label for="basic_comments" class="form-label" >Comments  <textarea name="basic_comments" id="basic_comment" cols="30" rows="10" class="form-control"></textarea> </label>
+                                                <label for="basic_comments" class="form-label" >Comments  <textarea  name="basic_comments" id="basic_comments" cols="30" rows="10" class="form-control"></textarea> </label>
                                               </div>
                                               <div class="col-md-6 mt-md-0 mt-2">
                                                   <div class="form-check">
