--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1267,6 +1267,8 @@
                     <th>Candidate&nbsp;ID</th>
                     <th>Rank</th>
                     <th>Vessel</th>
+
+                    <th>Vessel</th>
                     <th>Sign&nbsp;Off&nbsp;Date</th>
                     <th>Wages</th>
                     <th>Wages&nbsp;Types</th>
