--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -37,7 +37,20 @@
       animation-iteration-count: 1;
       animation-fill-mode: forwards;
     }
-    
+    .candidate-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.candidate-button:hover {
+    background-color: #0056b3;
+}
+
+
     @keyframes l9 {
       33%  {background-position: 0% 33%, 100% 33%, 200% 33%}
       66%  {background-position: -100% 66%, 0% 66%, 100% 66%}
@@ -717,13 +730,13 @@
         <table class="table table-bordered table" style="font-size: 12px;">
           <thead>
               <tr>
-                  <th class="col-auto" style="font-size: 8px;">Nemo ID</th>
+                  <th  style="font-size: 8px;">Nemo ID</th>
                   <th style="font-size: 8px;">First Name</th>
                   <th style="font-size: 8px;">Last Name</th>
                   <th style="font-size: 8px;">Rank</th>
                   <th style="font-size: 8px;">Vessel</th>
                   <th style="font-size: 8px;">Mobile</th>
-                  <th style="font-size: 8px;">Age</th>
+                  <th style="font-size: 8px;">DOB</th>
                   <th style="font-size: 8px;">Actions</th>
               </tr>
           </thead>
